[package]
authors = ["Eugene <inbox@null.page>"]
edition = "2018"
readme = "README.md"
name = "infinity-sampler"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/Eugeny/infinity-sampler"
description = "Deterministic reservoir sampling for Rust"

[lib]
name = "infinity_sampler"
path = "src/lib.rs"

[features]
microoptimizations = []

[dependencies]
heapless = "0.8"
